# ToolAgentTemplate

./: .gitignore  README.md  pyproject.toml
src/llmdoc/: __init__.py  config.py
src/llmdoc/clients/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py
src/llmdoc/examples/: function_calling_example.py
src/llmdoc/functions/: __init__.py  example.py
src/llmdoc/tools/: __init__.py  base.py  calc_tool.py  calendar_tool.py  weather_tool.py
